--- a/hamburger.html
+++ b/hamburger.html
@@ -1,74 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Hamburger</title>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link rel="stylesheet" href="./style.css"/>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css" integrity="sha384-ejwKkLla8gPP8t2u0eQyL0Q/4ItcnyveF505U0NIobD/SMsNyXrLti6CWaD0L52l" crossorigin="anonymous">
-    </head>
-    
-    <body>
-        <header>
-            <nav>
-            <div class= "pagename">
-                <img src="https://thumbs.dreamstime.com/b/animation-portrait-young-black-woman-dreadlocks-animation-portrait-young-black-woman-dreadlocks-background-179379079.jpg" alt="Dread head">
-                <h1>Neemah.Co</h1>
-            </div>
-       
-            <ul class="nav-items">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">More Info</a></li>
-            </ul>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hamburger</title>
+    <link rel="stylesheet" href="main.css">
+  </head>
 
-            <div class="ham_icon">
-                <i class="fa-solid fa-bars"></i>
-            </div>
+  <body>
+    <nav>
+      <div class="info">
+        <img
+          src="https://thumbs.dreamstime.com/b/animation-portrait-young-black-woman-dreadlocks-animation-portrait-young-black-woman-dreadlocks-background-179379079.jpg"
+          alt="dreed"
+        />
+        <h1>Neemah</h1>
+      </div>
 
-            <!-- <div class="close_ham">
-                <i class="fa-solid fa-xmark"></i>
-            </div> -->
-        </nav>
-        </header>
-
-
-        <!-- section -->
-        <div class="search_bar">
-            <div class="icon" id="search_icon">
-                <i class="bi bi-search"></i>
-            </div>
-            <input type="search" id="searchbar" placeholder="search image..." autofocus />
-        </div>
-
-        <div class="container">
-            <div class="images">
-                <img class="blackwomen" src="./imagefolder/happy.jpg" alt="Happy woman">
-                <p class="desc"><strong>Odun</strong></p>
-            </div>
-            <div class="images">
-                <img class="blackwomen" src="./imagefolder/nerd.jpg" alt="Female nerd">
-                 <p class="desc"><strong>Efua</strong></p>
-            </div>
-            <div class="images">
-                <img class="blackwomen" src="./imagefolder/twists.jpg" alt="Hair with green background">
-                <p class="desc"><strong>Nabila</strong></p>
-            </div>
-            <div class="images">
-            <img class="blackwomen" src="./imagefolder/dread.jpeg" alt="dread head">
-                <p class="desc"><strong>Zuri</strong></p>
-            </div>
-            <div class="images">
-                <img class="blackwomen" src="./imagefolder/blue.jpg" alt="Hair with blue background">
-                <p class="desc"><strong>Afia</strong></p>
-            </div>
-            <div class="images">
-                <img class="blackwomen" src="./imagefolder/back.jpg" alt="Backview">
-                <p class="desc"><strong>Mandla</strong></p>
-            </div>
-        </div>
-        <script src="./ham.js"></script>   
-    </body>
+      <label id="hamburger" for="toggle">&#9776;</label>
+      <input type="checkbox" id="toggle" />
+      <div class="items">
+        <a href="#">Home</a>
+        <a href="#">Contact Us</a>
+        <a href="#">Services</a>
+        <a href="#">About Us</a>
+      </div>
+    </nav>
+  </body>
+</html>
